# TransitNetworkModel

./: .editorconfig  .gitignore  CMakeLists.txt  Doxyfile  FindSQLite3.cmake  Makefile  README.md  get_gtfs_realtime  gtfs.db-journal  gtfs_versions  load_gtfs.sql  todo.txt
R/: .Rhistory  add_segment_distances.R  add_segments.R  check_particles.R  check_posterior.R  clean_historical.R  combine_hist.R  common.R  delays.R  etas.R  gethistorical.R  history.R  intersections.R  model.jags  model2.jags  model_segments.R  network.R  networkstate.R  play.R  process_historical_data.R  readparticles.R  segment_model.stan  segment_modeling.R  segments.R  segments.rda  smoothSpatTemp.cpp  stops.R  stuff.R  test.R  test.csv  travel_time_model.R  view_historical.R  view_particles.R  view_particles2.R  view_results.R
R/fullmodel/: fns.R  main.R  model.stan
R/stan/: hier_seg_model.stan  hier_seg_model2.stan
data/: intersections_roundabouts.json  intersections_trafficlights.json
docs/: annotated.html  classes.html  classgps_1_1Coord-members.html  classgps_1_1Coord.html  classgtfs_1_1GTFS-members.html  classgtfs_1_1GTFS.html  classgtfs_1_1Intersection-members.html  classgtfs_1_1Intersection.html  classgtfs_1_1Particle-members.html  classgtfs_1_1Particle.html  classgtfs_1_1Particle__coll__graph.map  classgtfs_1_1Particle__coll__graph.md5  classgtfs_1_1Route-members.html  classgtfs_1_1Route.html  classgtfs_1_1Segment-members.html  classgtfs_1_1Segment.html  classgtfs_1_1Shape-members.html  classgtfs_1_1Shape.html  classgtfs_1_1Stop-members.html  classgtfs_1_1Stop.html  classgtfs_1_1Trip-members.html  classgtfs_1_1Trip.html  classgtfs_1_1Trip__coll__graph.md5  classgtfs_1_1Trip__inherit__graph.map  classgtfs_1_1Trip__inherit__graph.md5  classgtfs_1_1Vehicle-members.html  classgtfs_1_1Vehicle.html  classsampling_1_1RNG-members.html  classsampling_1_1RNG.html  classsampling_1_1exponential-members.html  classsampling_1_1exponential.html  classsampling_1_1normal-members.html  classsampling_1_1normal.html  classsampling_1_1sample-members.html  classsampling_1_1sample.html  classsampling_1_1uniform-members.html  classsampling_1_1uniform.html  dir_135820457b1e8e8dc5343e26fb29c1f8.html  dir_2c1ec4cfaf5ed43ec260b4f91f837847.html  dir_49e56c817e5e54854c35e136979f97ca.html  (+107 more)
docs/html/: classgtfs_1_1Particle.html  classgtfs_1_1Vehicle-members.html  classgtfs_1_1Vehicle.html  gtfs_8h_source.html  index.html  namespacegtfs.html  pages.html
docs/html/search/: all_3.js
docs/latex/: annotated.tex  classgps_1_1Coord.tex  classgtfs_1_1GTFS.tex  classgtfs_1_1Intersection.tex  classgtfs_1_1Particle.tex  classgtfs_1_1Particle__coll__graph.md5  classgtfs_1_1Route.tex  classgtfs_1_1Segment.tex  classgtfs_1_1Shape.tex  classgtfs_1_1Stop.tex  classgtfs_1_1Trip.tex  classgtfs_1_1Trip__coll__graph.md5  classgtfs_1_1Trip__inherit__graph.md5  classgtfs_1_1Vehicle.tex  classsampling_1_1RNG.tex  classsampling_1_1exponential.tex  classsampling_1_1normal.tex  classsampling_1_1sample.tex  classsampling_1_1uniform.tex  dir_135820457b1e8e8dc5343e26fb29c1f8.tex  dir_49e56c817e5e54854c35e136979f97ca.tex  dir_4fef79e7177ba769987a8da36c892c5f.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_9cba3ccb450b89ac6f0c2a18abcbadf0.tex  dir_d041291c03f2c20465841b6aca0b69a5.tex  dir_d35140efa6a742a8e245f69014564ed7.tex  dir_d59af8ce877bc5f677fea381d5d8f913.tex  dir_dedda661d52f15c544835a0f3f778e7c.tex  dir_e6aa52be867dabd47a26c77df9fce7b1.tex  dir_fe864994c3ce973ac83d729a8b0e24ba.tex  files.tex  hierarchy.tex  index.tex  load__gtfs_8cpp.tex  load__gtfs_8cpp__incl.md5  md_README.tex  namespacegps.tex  namespacegtfs.tex  namespaces.tex  namespacesampling.tex  (+15 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  files_0.js  files_1.js  functions_0.js  functions_1.js  functions_10.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  (+19 more)
gps/: CMakeLists.txt  gps.cpp  gps.h
gtfs/: CMakeLists.txt  Intersection.cpp  Particle.cpp  Route.cpp  Segment.cpp  Shape.cpp  Stop.cpp  Trip.cpp  Vehicle.cpp  gtfs.cpp  gtfs.h
include/: gtfs-particle.h  gtfs-realtime.pb.cc  gtfs-realtime.pb.h  gtfs-vehicle.h  gtfs.h
proto/: CMakeLists.txt  gtfs-eta.proto  gtfs-network.proto
protobuf/: CMakeLists.txt  build_proto_files  gtfs-eta.proto  gtfs-network.proto  gtfs-realtime.pb.cc  gtfs-realtime.pb.h
sampling/: CMakeLists.txt  RNG.cpp  exponential.cpp  normal.cpp  sample.cpp  sampling.cpp  sampling.h  uniform.cpp
src/: GtfsParticle.cpp  GtfsVehicle.cpp  load_gtfs.cpp  transit_network_model.cpp
tests/: gps.h  test_gps.h  test_gtfs.h  test_sampling.h
